feat(web): add ime handling for dom backend

--- a/tui/web/index.html
+++ b/tui/web/index.html
@@ -45,10 +45,26 @@
         color: #f9fafb;
         font-family: "D2CodingLigature NF", sans-serif;
       }
+
+      .glues-ime {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        opacity: 0;
+        background: transparent;
+        color: transparent;
+        caret-color: transparent;
+        border: 0;
+        resize: none;
+        pointer-events: none;
+      }
+
       pre {
         font-family: "D2CodingLigature NF", monospace;
         font-size: 16px;
-        margin: 0px;
+        margin: 0;
       }
     </style>
   </head>
