--- a/tui/web/index.html
+++ b/tui/web/index.html
@@ -66,6 +66,335 @@
         font-size: 16px;
         margin: 0;
       }
+
+      pre span {
+        display: inline-block;
+        width: 1ch;
+        margin-right: 0;
+        vertical-align: top;
+        white-space: pre;
+        position: relative;
+      }
+      pre span:nth-child(1) { z-index: 320; }
+      pre span:nth-child(2) { z-index: 319; }
+      pre span:nth-child(3) { z-index: 318; }
+      pre span:nth-child(4) { z-index: 317; }
+      pre span:nth-child(5) { z-index: 316; }
+      pre span:nth-child(6) { z-index: 315; }
+      pre span:nth-child(7) { z-index: 314; }
+      pre span:nth-child(8) { z-index: 313; }
+      pre span:nth-child(9) { z-index: 312; }
+      pre span:nth-child(10) { z-index: 311; }
+      pre span:nth-child(11) { z-index: 310; }
+      pre span:nth-child(12) { z-index: 309; }
+      pre span:nth-child(13) { z-index: 308; }
+      pre span:nth-child(14) { z-index: 307; }
+      pre span:nth-child(15) { z-index: 306; }
+      pre span:nth-child(16) { z-index: 305; }
+      pre span:nth-child(17) { z-index: 304; }
+      pre span:nth-child(18) { z-index: 303; }
+      pre span:nth-child(19) { z-index: 302; }
+      pre span:nth-child(20) { z-index: 301; }
+      pre span:nth-child(21) { z-index: 300; }
+      pre span:nth-child(22) { z-index: 299; }
+      pre span:nth-child(23) { z-index: 298; }
+      pre span:nth-child(24) { z-index: 297; }
+      pre span:nth-child(25) { z-index: 296; }
+      pre span:nth-child(26) { z-index: 295; }
+      pre span:nth-child(27) { z-index: 294; }
+      pre span:nth-child(28) { z-index: 293; }
+      pre span:nth-child(29) { z-index: 292; }
+      pre span:nth-child(30) { z-index: 291; }
+      pre span:nth-child(31) { z-index: 290; }
+      pre span:nth-child(32) { z-index: 289; }
+      pre span:nth-child(33) { z-index: 288; }
+      pre span:nth-child(34) { z-index: 287; }
+      pre span:nth-child(35) { z-index: 286; }
+      pre span:nth-child(36) { z-index: 285; }
+      pre span:nth-child(37) { z-index: 284; }
+      pre span:nth-child(38) { z-index: 283; }
+      pre span:nth-child(39) { z-index: 282; }
+      pre span:nth-child(40) { z-index: 281; }
+      pre span:nth-child(41) { z-index: 280; }
+      pre span:nth-child(42) { z-index: 279; }
+      pre span:nth-child(43) { z-index: 278; }
+      pre span:nth-child(44) { z-index: 277; }
+      pre span:nth-child(45) { z-index: 276; }
+      pre span:nth-child(46) { z-index: 275; }
+      pre span:nth-child(47) { z-index: 274; }
+      pre span:nth-child(48) { z-index: 273; }
+      pre span:nth-child(49) { z-index: 272; }
+      pre span:nth-child(50) { z-index: 271; }
+      pre span:nth-child(51) { z-index: 270; }
+      pre span:nth-child(52) { z-index: 269; }
+      pre span:nth-child(53) { z-index: 268; }
+      pre span:nth-child(54) { z-index: 267; }
+      pre span:nth-child(55) { z-index: 266; }
+      pre span:nth-child(56) { z-index: 265; }
+      pre span:nth-child(57) { z-index: 264; }
+      pre span:nth-child(58) { z-index: 263; }
+      pre span:nth-child(59) { z-index: 262; }
+      pre span:nth-child(60) { z-index: 261; }
+      pre span:nth-child(61) { z-index: 260; }
+      pre span:nth-child(62) { z-index: 259; }
+      pre span:nth-child(63) { z-index: 258; }
+      pre span:nth-child(64) { z-index: 257; }
+      pre span:nth-child(65) { z-index: 256; }
+      pre span:nth-child(66) { z-index: 255; }
+      pre span:nth-child(67) { z-index: 254; }
+      pre span:nth-child(68) { z-index: 253; }
+      pre span:nth-child(69) { z-index: 252; }
+      pre span:nth-child(70) { z-index: 251; }
+      pre span:nth-child(71) { z-index: 250; }
+      pre span:nth-child(72) { z-index: 249; }
+      pre span:nth-child(73) { z-index: 248; }
+      pre span:nth-child(74) { z-index: 247; }
+      pre span:nth-child(75) { z-index: 246; }
+      pre span:nth-child(76) { z-index: 245; }
+      pre span:nth-child(77) { z-index: 244; }
+      pre span:nth-child(78) { z-index: 243; }
+      pre span:nth-child(79) { z-index: 242; }
+      pre span:nth-child(80) { z-index: 241; }
+      pre span:nth-child(81) { z-index: 240; }
+      pre span:nth-child(82) { z-index: 239; }
+      pre span:nth-child(83) { z-index: 238; }
+      pre span:nth-child(84) { z-index: 237; }
+      pre span:nth-child(85) { z-index: 236; }
+      pre span:nth-child(86) { z-index: 235; }
+      pre span:nth-child(87) { z-index: 234; }
+      pre span:nth-child(88) { z-index: 233; }
+      pre span:nth-child(89) { z-index: 232; }
+      pre span:nth-child(90) { z-index: 231; }
+      pre span:nth-child(91) { z-index: 230; }
+      pre span:nth-child(92) { z-index: 229; }
+      pre span:nth-child(93) { z-index: 228; }
+      pre span:nth-child(94) { z-index: 227; }
+      pre span:nth-child(95) { z-index: 226; }
+      pre span:nth-child(96) { z-index: 225; }
+      pre span:nth-child(97) { z-index: 224; }
+      pre span:nth-child(98) { z-index: 223; }
+      pre span:nth-child(99) { z-index: 222; }
+      pre span:nth-child(100) { z-index: 221; }
+      pre span:nth-child(101) { z-index: 220; }
+      pre span:nth-child(102) { z-index: 219; }
+      pre span:nth-child(103) { z-index: 218; }
+      pre span:nth-child(104) { z-index: 217; }
+      pre span:nth-child(105) { z-index: 216; }
+      pre span:nth-child(106) { z-index: 215; }
+      pre span:nth-child(107) { z-index: 214; }
+      pre span:nth-child(108) { z-index: 213; }
+      pre span:nth-child(109) { z-index: 212; }
+      pre span:nth-child(110) { z-index: 211; }
+      pre span:nth-child(111) { z-index: 210; }
+      pre span:nth-child(112) { z-index: 209; }
+      pre span:nth-child(113) { z-index: 208; }
+      pre span:nth-child(114) { z-index: 207; }
+      pre span:nth-child(115) { z-index: 206; }
+      pre span:nth-child(116) { z-index: 205; }
+      pre span:nth-child(117) { z-index: 204; }
+      pre span:nth-child(118) { z-index: 203; }
+      pre span:nth-child(119) { z-index: 202; }
+      pre span:nth-child(120) { z-index: 201; }
+      pre span:nth-child(121) { z-index: 200; }
+      pre span:nth-child(122) { z-index: 199; }
+      pre span:nth-child(123) { z-index: 198; }
+      pre span:nth-child(124) { z-index: 197; }
+      pre span:nth-child(125) { z-index: 196; }
+      pre span:nth-child(126) { z-index: 195; }
+      pre span:nth-child(127) { z-index: 194; }
+      pre span:nth-child(128) { z-index: 193; }
+      pre span:nth-child(129) { z-index: 192; }
+      pre span:nth-child(130) { z-index: 191; }
+      pre span:nth-child(131) { z-index: 190; }
+      pre span:nth-child(132) { z-index: 189; }
+      pre span:nth-child(133) { z-index: 188; }
+      pre span:nth-child(134) { z-index: 187; }
+      pre span:nth-child(135) { z-index: 186; }
+      pre span:nth-child(136) { z-index: 185; }
+      pre span:nth-child(137) { z-index: 184; }
+      pre span:nth-child(138) { z-index: 183; }
+      pre span:nth-child(139) { z-index: 182; }
+      pre span:nth-child(140) { z-index: 181; }
+      pre span:nth-child(141) { z-index: 180; }
+      pre span:nth-child(142) { z-index: 179; }
+      pre span:nth-child(143) { z-index: 178; }
+      pre span:nth-child(144) { z-index: 177; }
+      pre span:nth-child(145) { z-index: 176; }
+      pre span:nth-child(146) { z-index: 175; }
+      pre span:nth-child(147) { z-index: 174; }
+      pre span:nth-child(148) { z-index: 173; }
+      pre span:nth-child(149) { z-index: 172; }
+      pre span:nth-child(150) { z-index: 171; }
+      pre span:nth-child(151) { z-index: 170; }
+      pre span:nth-child(152) { z-index: 169; }
+      pre span:nth-child(153) { z-index: 168; }
+      pre span:nth-child(154) { z-index: 167; }
+      pre span:nth-child(155) { z-index: 166; }
+      pre span:nth-child(156) { z-index: 165; }
+      pre span:nth-child(157) { z-index: 164; }
+      pre span:nth-child(158) { z-index: 163; }
+      pre span:nth-child(159) { z-index: 162; }
+      pre span:nth-child(160) { z-index: 161; }
+      pre span:nth-child(161) { z-index: 160; }
+      pre span:nth-child(162) { z-index: 159; }
+      pre span:nth-child(163) { z-index: 158; }
+      pre span:nth-child(164) { z-index: 157; }
+      pre span:nth-child(165) { z-index: 156; }
+      pre span:nth-child(166) { z-index: 155; }
+      pre span:nth-child(167) { z-index: 154; }
+      pre span:nth-child(168) { z-index: 153; }
+      pre span:nth-child(169) { z-index: 152; }
+      pre span:nth-child(170) { z-index: 151; }
+      pre span:nth-child(171) { z-index: 150; }
+      pre span:nth-child(172) { z-index: 149; }
+      pre span:nth-child(173) { z-index: 148; }
+      pre span:nth-child(174) { z-index: 147; }
+      pre span:nth-child(175) { z-index: 146; }
+      pre span:nth-child(176) { z-index: 145; }
+      pre span:nth-child(177) { z-index: 144; }
+      pre span:nth-child(178) { z-index: 143; }
+      pre span:nth-child(179) { z-index: 142; }
+      pre span:nth-child(180) { z-index: 141; }
+      pre span:nth-child(181) { z-index: 140; }
+      pre span:nth-child(182) { z-index: 139; }
+      pre span:nth-child(183) { z-index: 138; }
+      pre span:nth-child(184) { z-index: 137; }
+      pre span:nth-child(185) { z-index: 136; }
+      pre span:nth-child(186) { z-index: 135; }
+      pre span:nth-child(187) { z-index: 134; }
+      pre span:nth-child(188) { z-index: 133; }
+      pre span:nth-child(189) { z-index: 132; }
+      pre span:nth-child(190) { z-index: 131; }
+      pre span:nth-child(191) { z-index: 130; }
+      pre span:nth-child(192) { z-index: 129; }
+      pre span:nth-child(193) { z-index: 128; }
+      pre span:nth-child(194) { z-index: 127; }
+      pre span:nth-child(195) { z-index: 126; }
+      pre span:nth-child(196) { z-index: 125; }
+      pre span:nth-child(197) { z-index: 124; }
+      pre span:nth-child(198) { z-index: 123; }
+      pre span:nth-child(199) { z-index: 122; }
+      pre span:nth-child(200) { z-index: 121; }
+      pre span:nth-child(201) { z-index: 120; }
+      pre span:nth-child(202) { z-index: 119; }
+      pre span:nth-child(203) { z-index: 118; }
+      pre span:nth-child(204) { z-index: 117; }
+      pre span:nth-child(205) { z-index: 116; }
+      pre span:nth-child(206) { z-index: 115; }
+      pre span:nth-child(207) { z-index: 114; }
+      pre span:nth-child(208) { z-index: 113; }
+      pre span:nth-child(209) { z-index: 112; }
+      pre span:nth-child(210) { z-index: 111; }
+      pre span:nth-child(211) { z-index: 110; }
+      pre span:nth-child(212) { z-index: 109; }
+      pre span:nth-child(213) { z-index: 108; }
+      pre span:nth-child(214) { z-index: 107; }
+      pre span:nth-child(215) { z-index: 106; }
+      pre span:nth-child(216) { z-index: 105; }
+      pre span:nth-child(217) { z-index: 104; }
+      pre span:nth-child(218) { z-index: 103; }
+      pre span:nth-child(219) { z-index: 102; }
+      pre span:nth-child(220) { z-index: 101; }
+      pre span:nth-child(221) { z-index: 100; }
+      pre span:nth-child(222) { z-index: 99; }
+      pre span:nth-child(223) { z-index: 98; }
+      pre span:nth-child(224) { z-index: 97; }
+      pre span:nth-child(225) { z-index: 96; }
+      pre span:nth-child(226) { z-index: 95; }
+      pre span:nth-child(227) { z-index: 94; }
+      pre span:nth-child(228) { z-index: 93; }
+      pre span:nth-child(229) { z-index: 92; }
+      pre span:nth-child(230) { z-index: 91; }
+      pre span:nth-child(231) { z-index: 90; }
+      pre span:nth-child(232) { z-index: 89; }
+      pre span:nth-child(233) { z-index: 88; }
+      pre span:nth-child(234) { z-index: 87; }
+      pre span:nth-child(235) { z-index: 86; }
+      pre span:nth-child(236) { z-index: 85; }
+      pre span:nth-child(237) { z-index: 84; }
+      pre span:nth-child(238) { z-index: 83; }
+      pre span:nth-child(239) { z-index: 82; }
+      pre span:nth-child(240) { z-index: 81; }
+      pre span:nth-child(241) { z-index: 80; }
+      pre span:nth-child(242) { z-index: 79; }
+      pre span:nth-child(243) { z-index: 78; }
+      pre span:nth-child(244) { z-index: 77; }
+      pre span:nth-child(245) { z-index: 76; }
+      pre span:nth-child(246) { z-index: 75; }
+      pre span:nth-child(247) { z-index: 74; }
+      pre span:nth-child(248) { z-index: 73; }
+      pre span:nth-child(249) { z-index: 72; }
+      pre span:nth-child(250) { z-index: 71; }
+      pre span:nth-child(251) { z-index: 70; }
+      pre span:nth-child(252) { z-index: 69; }
+      pre span:nth-child(253) { z-index: 68; }
+      pre span:nth-child(254) { z-index: 67; }
+      pre span:nth-child(255) { z-index: 66; }
+      pre span:nth-child(256) { z-index: 65; }
+      pre span:nth-child(257) { z-index: 64; }
+      pre span:nth-child(258) { z-index: 63; }
+      pre span:nth-child(259) { z-index: 62; }
+      pre span:nth-child(260) { z-index: 61; }
+      pre span:nth-child(261) { z-index: 60; }
+      pre span:nth-child(262) { z-index: 59; }
+      pre span:nth-child(263) { z-index: 58; }
+      pre span:nth-child(264) { z-index: 57; }
+      pre span:nth-child(265) { z-index: 56; }
+      pre span:nth-child(266) { z-index: 55; }
+      pre span:nth-child(267) { z-index: 54; }
+      pre span:nth-child(268) { z-index: 53; }
+      pre span:nth-child(269) { z-index: 52; }
+      pre span:nth-child(270) { z-index: 51; }
+      pre span:nth-child(271) { z-index: 50; }
+      pre span:nth-child(272) { z-index: 49; }
+      pre span:nth-child(273) { z-index: 48; }
+      pre span:nth-child(274) { z-index: 47; }
+      pre span:nth-child(275) { z-index: 46; }
+      pre span:nth-child(276) { z-index: 45; }
+      pre span:nth-child(277) { z-index: 44; }
+      pre span:nth-child(278) { z-index: 43; }
+      pre span:nth-child(279) { z-index: 42; }
+      pre span:nth-child(280) { z-index: 41; }
+      pre span:nth-child(281) { z-index: 40; }
+      pre span:nth-child(282) { z-index: 39; }
+      pre span:nth-child(283) { z-index: 38; }
+      pre span:nth-child(284) { z-index: 37; }
+      pre span:nth-child(285) { z-index: 36; }
+      pre span:nth-child(286) { z-index: 35; }
+      pre span:nth-child(287) { z-index: 34; }
+      pre span:nth-child(288) { z-index: 33; }
+      pre span:nth-child(289) { z-index: 32; }
+      pre span:nth-child(290) { z-index: 31; }
+      pre span:nth-child(291) { z-index: 30; }
+      pre span:nth-child(292) { z-index: 29; }
+      pre span:nth-child(293) { z-index: 28; }
+      pre span:nth-child(294) { z-index: 27; }
+      pre span:nth-child(295) { z-index: 26; }
+      pre span:nth-child(296) { z-index: 25; }
+      pre span:nth-child(297) { z-index: 24; }
+      pre span:nth-child(298) { z-index: 23; }
+      pre span:nth-child(299) { z-index: 22; }
+      pre span:nth-child(300) { z-index: 21; }
+      pre span:nth-child(301) { z-index: 20; }
+      pre span:nth-child(302) { z-index: 19; }
+      pre span:nth-child(303) { z-index: 18; }
+      pre span:nth-child(304) { z-index: 17; }
+      pre span:nth-child(305) { z-index: 16; }
+      pre span:nth-child(306) { z-index: 15; }
+      pre span:nth-child(307) { z-index: 14; }
+      pre span:nth-child(308) { z-index: 13; }
+      pre span:nth-child(309) { z-index: 12; }
+      pre span:nth-child(310) { z-index: 11; }
+      pre span:nth-child(311) { z-index: 10; }
+      pre span:nth-child(312) { z-index: 9; }
+      pre span:nth-child(313) { z-index: 8; }
+      pre span:nth-child(314) { z-index: 7; }
+      pre span:nth-child(315) { z-index: 6; }
+      pre span:nth-child(316) { z-index: 5; }
+      pre span:nth-child(317) { z-index: 4; }
+      pre span:nth-child(318) { z-index: 3; }
+      pre span:nth-child(319) { z-index: 2; }
+      pre span:nth-child(320) { z-index: 1; }
     </style>
   </head>
   <body>
